--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     build: ./backend
     ports:
       - "3000:3000"
-    # Load environment variables directly from the file
+    # Use the .env file directly
     env_file:
       - ./backend/.env
+    depends_on:
+      - mongo
 
   frontend:
     build: ./frontend
@@ -15,3 +17,13 @@ services:
       - "5173:80"
     depends_on:
       - backend
+
+  mongo:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
