--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "prom-client": "^15.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
