Remove failing legacy pipeline and add Trivy to new pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,6 +39,15 @@ jobs:
         # Only run if secrets are available to prevent failure on forks/local
         if: ${{ secrets.ZMESSENGERTOKEN != '' }}
 
+      - name: Run Trivy vulnerability scanner (Filesystem)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'table'
+          exit-code: '1' # Fail the build if vulnerabilities are found
+          severity: 'CRITICAL,HIGH'
+
   backend:
     needs: security
     runs-on: ubuntu-latest
