--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,6 +1,7 @@
 title = "gitleaks config"
 
 [[rules]]
+id = "generic-credential"
 description = "Generic Credential"
 regex = '''(?i)(password|passwd|pwd|secret|key|token|auth)[a-z0-9_ .\-=]{0,25}[:=][^a-z0-9_ \-=]*'''
 tags = ["cred", "generic"]
