Disable SonarCloud quality gate blocking in GitHub Actions
- Add sonar.qualitygate.wait=false to prevent quality gate from creating failing GitHub check
- Pipeline will continue to collect metrics without blocking
- Allows green checkmark in GitHub while still monitoring code quality

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,3 +15,7 @@ sonar.sourceEncoding=UTF-8
 # Javascript/Typescript specific
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info,backend/coverage/lcov.info
 
+# Quality Gate - Disable for GitHub Actions
+# This prevents the quality gate from blocking GitHub checks
+sonar.qualitygate.wait=false
+
