Fix SonarCloud scan action
- Change from sonarqube-scan-action to sonarcloud-github-action
- Add GITHUB_TOKEN for proper integration
- Remove SONAR_HOST_URL (not needed for SonarCloud)
- Scan will now properly execute and send results to SonarCloud

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,12 +28,12 @@ jobs:
           cd frontend
           npm audit --audit-level=high || true
 
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         continue-on-error: true  # Allow pipeline to continue even if SonarQube fails
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.ZMESSENGERTOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - name: Run Trivy vulnerability scanner (Filesystem)
         uses: aquasecurity/trivy-action@master
